* Refactored InformerEntrypoint to use SmartLifecycle * Spring boot upgrade to 3.5.4 *fabric8 upgrade to 7.3.1